2002-08-01 Rune Zedeler <rune@zedeler.dk>

	* mf/feta-eindelijk.mf: Changed layout of 16th and shorter rests
	to match the 8th rest. slanted 8th rest a bit more.
	WARNING: 8th rest and classical quarter rest exchanged.
	
2002-07-31 Rune Zedeler <rune@zedeler.dk>

	* input/SondagMorgen/*.ly: Added. TODO: Lots of cleanups but now
	it's there.

2002-07-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (chord_notes): typo. 

	* scm/music-functions.scm (unfold-repeats): bugfix

2002-07-31  Rune Zedeler <rune@zedeler.dk>

	* ly/engraver-init.ly: remove alias "Current" from all contexts.

	* lily/translator-group (find_existing_translator): If
	n=="Current", return this context.
	
	* lily/tab-note-heads-engraver.cc: add algorithm for automatically
	selecting frets when none given by user. Read property
	"minimumFret".

	* scm/translator-property-description.scm: add "minimumFret"

	* lily/rest.cc:
	* lily/time-signature.cc: spacing for even number of staff lines.
	
2002-07-31  Han-Wen  <hanwen@cs.uu.nl>

	* input/bugs/: remove various files.

	* Documentation/user/refman.itely: doco updates.

	* scripts/ly2dvi.py (find_pfa_fonts): add and document --pdf
	option.

2002-07-30  Rune Zedeler <rune@zedeler.dk>

	* ly/engraver-init.ly: add alias "Current" to all contexts.

	* ly/property-init.ly: Use "Current" context in the accidental
	macros. TODO: Do the same in some of the other macros?
	
	* scm/output-lib.scm (tablature-stem-attachment-function): add
	duration argument. Now the function can be called again :-)

2002-07-30  Han-Wen  <hanwen@cs.uu.nl>

	* lily/parse-scm.cc (parse_handler): add better error message,
	return a sensible number of nchars

2002-07-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parse-scm.cc (protected_ly_parse_scm): catch GUILE errors
	when parsing, and emit useful warning message.

	* lily/lily-guile.cc (ly_parse_scm): add line/col/file locations
	to SCM port for parser.

2002-07-28  Rune Zedeler <rune@zedeler.dk>
	