@@ -1,5 +1,11 @@
 2002-08-01 Rune Zedeler <rune@zedeler.dk>
 
+	* lily/tab-note-heads-engraver.cc: add algorithm for automatically
+	selecting frets when none given by user. Read property
+	"minimumFret".
+
+	* scm/translator-property-description.scm: Add "minimumFret"
+	
 	* mf/feta-eindelijk.mf: Changed layout of 16th and shorter rests
 	to match the 8th rest. slanted 8th rest a bit more.
 	WARNING: 8th rest and classical quarter rest exchanged.
